# tool-eval-bench

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SKILL.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
compare/: README.md  compare_summary.py  compare_tool_eval.py
compare/git/: Agents-A1-Q8_0_summary.md  Agents-A1_vs_Qwen3.6-35B-A3B-UD-Q8_K_XL.html  Qwen3.6-35B-A3B-UD-Q8_K_XL_summary.md  README.md
docs/: api.md  architecture.md  methodology.md  project-assessment-report.md
docs/superpowers/plans/: 2026-05-31-benchmark-integrity.md
docs/superpowers/specs/: 2026-05-31-benchmark-integrity-design.md
src/tool_eval_bench/: __init__.py  api.py  schema.py
src/tool_eval_bench/adapters/: openai_compat.py
src/tool_eval_bench/cli/: bench.py  commands.py  compare_report.py  display.py  helpers.py  leaderboard.py  perf.py  pressure.py  server.py  spec_bench.py  spec_live_display.py  spec_live_rendering.py
src/tool_eval_bench/compare_reports/: __init__.py  summary.py  tool_eval.py
src/tool_eval_bench/domain/: errors.py  models.py  plugin.py  scenarios.py
src/tool_eval_bench/evals/: helpers.py  scenarios.py  scenarios_adversarial.py  scenarios_agentic.py  scenarios_extended.py  scenarios_hardmode.py  scenarios_hardmode_expanded.py  scenarios_large_toolset.py  scenarios_planning.py  scenarios_structured.py
src/tool_eval_bench/plugins/gsm8k/: dataset.py  plugin.py
src/tool_eval_bench/plugins/ifeval/: checkers.py  plugin.py
src/tool_eval_bench/plugins/mmlu/: plugin.py
src/tool_eval_bench/runner/: async_tools.py  judge.py  llama_benchy.py  orchestrator.py  service.py  spec_live.py  speculative.py  throughput.py
src/tool_eval_bench/storage/: db.py  reports.py
src/tool_eval_bench/utils/: ids.py
tests/: conftest.py  test_adapter.py  test_api.py  test_claw_eval_features.py  test_cli_bench.py  test_compare_reports.py  test_context_pressure.py  test_coverage_gaps.py  test_critical_fixes.py  test_display.py  test_e2e.py  test_evaluator_contract.py  test_evaluator_fixes.py  test_evaluator_robustness.py  test_evaluators_extended.py  test_failure_kind.py  test_gsm8k_dataset.py  test_hardmode.py  test_hf_utils.py  test_ifeval_checkers.py  test_judge.py  test_leaderboard_display.py  test_llama_benchy.py  test_metadata.py  test_mmlu_evaluator.py  test_orchestrator.py  test_planning_scenarios.py  test_reporter.py  test_review_fixes.py  test_run_context.py  test_scenarios.py  test_spec_live.py  test_spec_live_shutdown.py  test_speculative.py  test_structured_output.py  test_tc09_tc27_answer_check.py  test_throughput.py  test_v122_changes.py  test_v130_features.py
