[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-eval-bench"
version = "1.8.0"
description = "Agentic tool-call benchmark for LLM serving stacks (vLLM, LiteLLM, llama.cpp)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "SeraphimSerapis" }]
keywords = ["llm", "benchmark", "tool-calling", "vllm", "evaluation", "agentic"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28.0",
  "python-dotenv>=1.1.0",
  "rich>=14.0.0",
]

[project.optional-dependencies]
perf = [
  "llama-benchy>=0.3.5",
]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.0",
]

[project.scripts]
tool-eval-bench = "tool_eval_bench.cli.bench:main"

[project.urls]
Homepage = "https://github.com/SeraphimSerapis/tool-eval-bench"
Repository = "https://github.com/SeraphimSerapis/tool-eval-bench"
Documentation = "https://github.com/SeraphimSerapis/tool-eval-bench#readme"
Issues = "https://github.com/SeraphimSerapis/tool-eval-bench/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]
